--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,1 +1,1 @@
-<footer class="site-footer">P&aacute;gina web del curso de <b></b>Visualizaci&oacute;n de Informaci&oacute;n</footer>b> de la <i></i>Pontificia Universidad Cat&oacute;lica de Chile</i></footer>
+<footer class="site-footer">P&aacute;gina web del curso de <b>Visualizaci&oacute;n de Informaci&oacute;n</footer><b> de la <i>Pontificia Universidad Cat&oacute;lica de Chile</i></footer>
